@@ -68,7 +68,7 @@ void Solution::analyse(const fileNode* file) {
 }
 
 template<class strType>
-inline void exposeIntoVector(const js::GenericValue<js::UTF8<> >& val,
+inline void exposeStringArrayIntoVector(const js::GenericValue<js::UTF8<> >& val,
 							 std::vector<strType>& vec) {
 	switch(val.GetType()) {
 		case js::kStringType:
@@ -92,6 +92,109 @@ inline void getString(const js::GenericValue<T>& val, strType& str) {
 	str = val.GetString();
 }
 
+inline bool stringMatchIgnoreAlphaCase(const char *str1, const char *str2) {
+	while(*str1 && *str2)
+		if(tolower(*(str1++)) != tolower(*(str2++))) return false;
+	return *str1 == *str2;
+}
+
+template <class ModuleType>
+void pushSwitcher(ModuleType *module, const Object *obj) {
+	trace(ATTR(GREEN) "Found" ATTR(RESET) " a switcher");
+	trace.push();
+	if(!obj->HasMember("expression") || !obj->HasMember("case"))
+		throw ERR::OBJECT_TYPE_UNSUPPORTED;
+	auto &e = (*obj)["expression"], &c = (*obj)["case"];
+	if(e.GetType() != js::kStringType ||
+		c.GetType() != js::kArrayType ||
+		!c.Size())
+		throw ERR::OBJECT_TYPE_UNSUPPORTED;
+
+	const char *tempstr = e.GetString();
+	int explen = strlen(tempstr), size = c.Size(), valuelen;
+	char *expression = new char[explen + 14], *value = new char[16384];
+	strcpy(expression, tempstr);
+	strcat(expression, " 2>"
+		#ifdef _WIN32
+		"null"
+		#else
+		"/dev/null"
+		#endif
+	);
+	FILE *pp = popen(expression, "r");
+	if(!pp)
+		throw ERR::SWITCH_EVALUATE_FAILED;
+	valuelen = fread(value, sizeof(char), 16383, pp);
+	if(valuelen == 0)
+		throw ERR::SWITCH_EVALUATE_FAILED;
+	pclose(pp);
+#ifdef _DEBUG
+	trace(ATTR("30") "Expression : %s", value);
+#endif
+	int defaultTarget = -1, switchTarget = -1;
+	for(int i = 0; i < size; ++i)
+		if(c[i].GetType() == js::kObjectType) {
+			auto& o = c[i];
+			if(o.HasMember("default")) {
+				if(defaultTarget != -1) //multiple default label
+					throw ERR::OBJECT_TYPE_UNSUPPORTED;
+				defaultTarget = i;
+			} else if(o.HasMember("name")) {
+				auto &n = o["name"];
+				if(n.GetType() != js::kStringType)
+					throw ERR::OBJECT_TYPE_UNSUPPORTED;
+				if(stringMatchIgnoreAlphaCase(n.GetString(), value)) {
+					if(switchTarget != -1) //multiple matched label
+						throw ERR::OBJECT_TYPE_UNSUPPORTED;
+					switchTarget = i;
+				}
+			}
+		} else throw ERR::OBJECT_TYPE_UNSUPPORTED;
+	if(switchTarget == -1) {
+		if(defaultTarget == -1)
+			trace(ATTR(YELLOW) "Warning: no matched label!");
+		else {
+			trace(ATTR(GREEN) "Matched "
+				  ATTR(RESET) "default label");
+			module->loadData(&c[defaultTarget]);
+		}
+	} else {
+		trace(ATTR(GREEN) "Matched "
+			ATTR(RESET) "label #%d", switchTarget);
+		module->loadData(&c[switchTarget]);
+	}
+	//switch
+	//default check
+	delete expression;
+	delete value;
+	trace.pop();
+}
+
+template <class ModuleType, class ObjectType>
+void checkSwitcher(ModuleType *module, ObjectType *object) {
+	if(object->HasMember("switcher")) {
+		const Object &obj = (*object)["switcher"];
+		switch(obj.GetType()) {
+			case js::kObjectType: pushSwitcher(module, &obj); break;
+			case js::kArrayType:
+				for(int i = 0, sz = obj.Size(); i < sz; ++i)
+					pushSwitcher(module, &obj[i]);
+				break;
+			default:
+				throw ERR::OBJECT_TYPE_UNSUPPORTED;
+		}
+	}
+}
+
+void Config::loadData(const Object *obj) {
+	if(obj->HasMember("includeDir"))
+		exposeStringArrayIntoVector((*obj)["includeDir"], includeDir);
+	if(obj->HasMember("distDir"))
+		getString((*obj)["distDir"], distDir);
+	if(obj->HasMember("srcDir"))
+		exposeStringArrayIntoVector((*obj)["srcDir"], srcDir);
+}
+
 void Config::parse() {
 	if(parsed) return;
 	parsed = true;
@@ -101,13 +204,16 @@ void Config::parse() {
 	#ifdef _DEBUG
 	printObject(*obj);
 	#endif
-	if(obj->HasMember("includeDir"))
-		exposeIntoVector((*obj)["includeDir"], includeDir);
-	if(obj->HasMember("distDir"))
-		getString((*obj)["distDir"], distDir);
-	if(obj->HasMember("srcDir"))
-		exposeIntoVector((*obj)["srcDir"], srcDir);
+	loadData(obj);
+	checkSwitcher(this, obj);
 	trace.pop();
+}
+
+void Compiler::loadData(const Object *obj) {
+	if(obj->HasMember("executableName"))
+		getString((*obj)["executableName"], executableName);
+	if(obj->HasMember("compileFlag"))
+		exposeStringArrayIntoVector((*obj)["compileFlag"], compileFlag);
 }
 
 void Compiler::parse() {
@@ -119,11 +225,18 @@ void Compiler::parse() {
 	#ifdef _DEBUG
 	printObject(*obj);
 	#endif
+	loadData(obj);
+	checkSwitcher(this, obj);
+	trace.pop();
+}
+
+void Linker::loadData(const Object*obj) {
 	if(obj->HasMember("executableName"))
 		getString((*obj)["executableName"], executableName);
-	if(obj->HasMember("compileFlag"))
-		exposeIntoVector((*obj)["compileFlag"], compileFlag);
-	trace.pop();
+	if(obj->HasMember("outputFlag"))
+		getString((*obj)["outputFlag"], outputFlag);
+	if(obj->HasMember("linkFlag"))
+		exposeStringArrayIntoVector((*obj)["linkFlag"], linkFlag);
 }
 
 void Linker::parse() {
@@ -135,13 +248,25 @@ void Linker::parse() {
 	#ifdef _DEBUG
 	printObject(*obj);
 	#endif
-	if(obj->HasMember("executableName"))
-		getString((*obj)["executableName"], executableName);
-	if(obj->HasMember("outputFlag"))
-		getString((*obj)["outputFlag"], outputFlag);
-	if(obj->HasMember("linkFlag"))
-		exposeIntoVector((*obj)["linkFlag"], linkFlag);
+	loadData(obj);
+	checkSwitcher(this, obj);
 	trace.pop();
+}
+
+void Target::loadData(const Object *obj) {
+	if(obj->HasMember("src"))
+		exposeStringArrayIntoVector((*obj)["src"], sources);
+	if(obj->HasMember("srcR"))
+		exposeStringArrayIntoVector((*obj)["srcR"], sourcesR);
+	if(obj->HasMember("config"))
+		getString((*obj)["config"], config);
+	else config = "global";
+	if(obj->HasMember("compiler"))
+		getString((*obj)["compiler"], compiler);
+	else compiler = "global";
+	if(obj->HasMember("linker"))
+		getString((*obj)["linker"], linker);
+	else linker = "global";
 }
 
 void Target::parse() {
@@ -153,21 +278,18 @@ void Target::parse() {
 	#ifdef _DEBUG
 	printObject(*obj);
 	#endif
-	if(obj->HasMember("src"))
-		exposeIntoVector((*obj)["src"], sources);
-	if(obj->HasMember("srcR"))
-		exposeIntoVector((*obj)["srcR"], sourcesR);
-	if(obj->HasMember("config"))
-		getString((*obj)["config"], config);
-	else config = "global";
-	if(obj->HasMember("compiler"))
-		getString((*obj)["compiler"], compiler);
-	else compiler = "global";
-	if(obj->HasMember("linker"))
-		getString((*obj)["linker"], linker);
-	else linker = "global";
+	loadData(obj);
+	checkSwitcher(this, obj);
 	trace.pop();
 }
+
+void Task::loadData(const Object * obj) {
+	if(obj->HasMember("target"))
+		exposeStringArrayIntoVector((*obj)["target"], target);
+	else target.push_back(module<Target, Targets, &targets>("global"));
+	if(obj->HasMember("default"))
+			solution.setDefaultTask(name);
+		}
 
 void Task::parse() {
 	if(parsed) return;
@@ -178,16 +300,7 @@ void Task::parse() {
 	#ifdef _DEBUG
 	printObject(*obj);
 	#endif
-	if(obj->HasMember("target"))
-		exposeIntoVector((*obj)["target"], target);
-	else target.push_back(module<Target, Targets, &targets>("global"));
-	if(obj->HasMember("default")) {
-		auto& o = (*obj)["default"];
-		if(o.GetType() != js::kTrueType)
-			trace(ATTR(YELLOW) "Ignored illegal key 'default'");
-		else {
-			solution.setDefaultTask(name);
-		}
-	}
+	loadData(obj);
+	checkSwitcher(this, obj);
 	trace.pop();
 }
